infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  # annotations: 
  #   kubernetes.io.ingress.class: nginx
spec: 
  ingressClassName: nginx
  rules: 
    - host: tickets.app
      http:
        paths: 
          - path: /api/users/?(.*)
            pathType: ImplementationSpecific
            backend: 
              service: 
                name: auth-srv
                port: 
                  number: 3000
